deploy/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-gov
  name: app-gov
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-gov
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-gov
    app.openshift.io/runtime: python
  name: app-gov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-gov
  template:
    metadata:
      labels:
        app: app-gov
    spec:
      containers:
      - image: quay.io/ansible_helm/slack-bot:1.0.0
        imagePullPolicy: Always
        name: app-gov
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-gov
  name: app-gov
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: app-gov
    weight: 100
